--- a/Group9/Views/Onboarding.storyboard
+++ b/Group9/Views/Onboarding.storyboard
@@ -31,7 +31,7 @@ Wastly</string>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Rdi-go-dep">
                                         <rect key="frame" x="0.0" y="66" width="414" height="328"/>
-                                        <color key="backgroundColor" red="0.95018929240000005" green="0.55348438020000001" blue="0.066253565249999993" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7bO-ag-hya">
                                             <size key="itemSize" width="50" height="50"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
